[metadata]
name = madminer
version = file: VERSION
url = https://github.com/madminer-tool/madminer
description = Mining gold from MadGraph to improve limit setting in particle physics.
long_description = file: README.md
long_description_content_type = text/markdown
author = Johann Brehmer, Felix Kling, Irina Espejo, Sinclert Perez, Kyle Cranmer
author_email = johann.brehmer@nyu.edu
license = MIT
project_urls =
    Documentation = https://madminer.readthedocs.io/en/latest/
    Source Code = https://github.com/madminer-tool/madminer
    Issue Tracker = https://github.com/madminer-tool/madminer/issues
classifiers =
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
install_requires =
    h5py
    matplotlib>=2.0.0
    numpy>=1.20.0
    particle>=0.16.0
    scipy>=1.0.0
    torch>=1.0.0
    uproot3>=3.14.1
    vector>=0.8.4
    sympy>=1.10.1

[options.packages.find]
exclude =
    tests

[options.extras_require]
docs =
    myst-parser
    numpydoc
    sphinx>=1.4
    sphinx_rtd_theme
lint =
    black[jupyter]>=21.8b0
test =
    pytest
examples =
    bqplot
    pandas
